--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
         <?php include 'mail.php';?>
         </div>
       <div class="col-md-6 col-sm-6">
-        <form id="main-contact-form" name="contact-form" method="POST" action="#">
+        <form id="main-contact-form" name="contact-form" method="POST" action="mail.php">
           <div class="row  wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
             <div class="col-sm-6">
               <div class="form-group">
